--- a/index.html
+++ b/index.html
@@ -19,35 +19,139 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    Features Team Sign In All your files in one secure location, accessible
-    anywhere. Fylo stores all your most important files in one secure location.
-    Access them wherever you need, share and collaborate with friends family,
-    and co-workers. Get Started Access your files, anywhere The ability to use a
-    smartphone, tablet, or computer to access your account means your files
-    follow you everywhere. Security you can trust 2-factor authentication and
-    user-controlled encryption are just a couple of the security features we
-    allow to help secure your files. Real-time collaboration Securely share
-    files and folders with friends, family and colleagues for live
-    collaboration. No email attachments required. Store any type of file Whether
-    you're sharing holidays photos or work documents, Fylo has you covered
-    allowing for all file types to be securely stored and shared. Stay
-    productive, wherever you are Never let location be an issue when accessing
-    your files. Fylo has you covered for all of your file storage needs.
-    Securely share files and folders with friends, family and colleagues for
-    live collaboration. No email attachments required. See how Fylo works Fylo
-    has improved our team productivity by an order of magnitude. Since making
-    the switch our team has become a well-oiled collaboration machine. Satish
-    Patel Founder & CEO, Huddle Fylo has improved our team productivity by an
-    order of magnitude. Since making the switch our team has become a well-oiled
-    collaboration machine. Bruce McKenzie Founder & CEO, Huddle Fylo has
-    improved our team productivity by an order of magnitude. Since making the
-    switch our team has become a well-oiled collaboration machine. Iva Boyd
-    Founder & CEO, Huddle Get early access today It only takes a minute to sign
-    up and our free starter tier is extremely generous. If you have any
-    questions, our support team would be happy to help you. Get Started For Free
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua +1-543-123-4567
-    example@fylo.com About Us Jobs Press Blog Contact Us Terms Privacy
+    <header>Features Team Sign In</header>
+    <div class="hero-container">
+      <img class="intro-image" src="images/illustration-intro.png" alt="" />
+      <h1>All your files in one secure location, accessible anywhere.</h1>
+      <p>
+        Fylo stores all your most important files in one secure location. Access
+        them wherever you need, share and collaborate with friends family, and
+        co-workers.
+      </p>
+      <button>Get Started</button>
+    </div>
+    <div class="boxes">
+      <div class="box">
+        <img class="" src="images/icon-access-anywhere.svg" alt="" />
+        <h2>Access your files, anywhere</h2>
+        <p>
+          Access your files, anywhere The ability to use a smartphone, tablet,
+          or computer to access your account means your files follow you
+          everywhere.
+        </p>
+      </div>
+      <div class="box">
+        <img class="" src="images/icon-access-anywhere.svg" alt="" />
+        <h2>Security you can trust</h2>
+        <p>
+          2-factor authentication and user-controlled encryption are just a
+          couple of the security features we allow to help secure your files.
+        </p>
+      </div>
+      <div class="box">
+        <img class="" src="images/icon-access-anywhere.svg" alt="" />
+        <h2>Real-time collaboration</h2>
+        <p>
+          Securely share files and folders with friends, family and colleagues
+          for live collaboration. No email attachments required.
+        </p>
+      </div>
+      <div class="box">
+        <img class="" src="images/icon-access-anywhere.svg" alt="" />
+        <h2>Store any type of file</h2>
+        <p>
+          Store any type of file Whether you're sharing holidays photos or work
+          documents, Fylo has you covered allowing for all file types to be
+          securely stored and shared.
+        </p>
+      </div>
+    </div>
+    <div class="split">
+      <div class="left">
+        <img class="" src="images/illustration-stay-productive.png" alt="" />
+      </div>
+      <div class="right">
+        <h2>Stay productive, wherever you are</h2>
+        <p>
+          Never let location be an issue when accessing your files. Fylo has you
+          covered for all of your file storage needs.
+        </p>
+        <p>
+          Securely share files and folders with friends, family and colleagues
+          for live collaboration. No email attachments required.
+        </p>
+        <a href="">See how Fylo works</a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="testimonial-box">
+        <p>
+          Fylo has improved our team productivity by an order of magnitude.
+          Since making the switch our team has become a well-oiled collaboration
+          machine.
+        </p>
+        <div class="user-info">
+          <img src="images/profile-1.jpg" alt="" />
+          <p>Satish Patel</p>
+          <p>Founder & CEO, Huddle</p>
+        </div>
+      </div>
+      <div class="testimonial-box">
+        <p>
+          Fylo has improved our team productivity by an order of magnitude.
+          Since making the switch our team has become a well-oiled collaboration
+          machine.
+        </p>
+        <div class="user-info">
+          <img src="images/profile-2.jpg" alt="" />
+          <p>Bruce McKenzie</p>
+          <p>Founder & CEO, Huddle</p>
+        </div>
+      </div>
+      <div class="testimonial-box">
+        <p>
+          Fylo has improved our team productivity by an order of magnitude.
+          Since making the switch our team has become a well-oiled collaboration
+          machine.
+        </p>
+        <div class="user-info">
+          <img src="images/profile-3.jpg" alt="" />
+          <p>Iva Boyd</p>
+          <p>Founder & CEO, Huddle</p>
+        </div>
+      </div>
+    </div>
+    <div class="info-container">
+      <h2>Get early access today</h2>
+      <p>
+        It only takes a minute to sign up and our free starter tier is extremely
+        generous. If you have any questions, our support team would be happy to
+        help you.
+      </p>
+      <button>Get Started For Free</button>
+    </div>
+    <footer>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua
+      </p>
+      <ul>
+        <li>+1-543-123-4567</li>
+        <li>example@fylo.com</li>
+      </ul>
+      <ul>
+        <li>About Us</li>
+        <li>Jobs</li>
+        <li>Press</li>
+        <li>Blog</li>
+      </ul>
+      <ul>
+        <li>Contact</li>
+        <li>Terms</li>
+        <li>Privacy</li>
+      </ul>
+      <div class="social"></div>
+    </footer>
 
     <footer>
       <p class="attribution">
