--- a/index.html
+++ b/index.html
@@ -19,138 +19,166 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>Features Team Sign In</header>
-    <div class="hero-container">
-      <img class="intro-image" src="images/illustration-intro.png" alt="" />
-      <h1>All your files in one secure location, accessible anywhere.</h1>
-      <p>
-        Fylo stores all your most important files in one secure location. Access
-        them wherever you need, share and collaborate with friends family, and
-        co-workers.
-      </p>
-      <button>Get Started</button>
-    </div>
-    <div class="boxes">
-      <div class="box">
-        <img class="" src="images/icon-access-anywhere.svg" alt="" />
-        <h2>Access your files, anywhere</h2>
-        <p>
-          Access your files, anywhere The ability to use a smartphone, tablet,
-          or computer to access your account means your files follow you
-          everywhere.
+    <div class="content-container">
+      <header class="header">
+        <img class="logo" src="images/logo.svg" alt="" />
+        <ul class="header-menu">
+          <li class="menu-item">Features</li>
+          <li class="menu-item">Team</li>
+          <li class="menu-item">Sign In</li>
+        </ul>
+      </header>
+      <div class="hero-container">
+        <img class="intro-image" src="images/illustration-intro.png" alt="" />
+        <h1 class="intro-title">
+          All your files in one secure location, accessible anywhere.
+        </h1>
+        <p class="intro-text">
+          Fylo stores all your most important files in one secure location.
+          Access them wherever you need, share and collaborate with friends
+          family, and co-workers.
         </p>
+        <button class="intro-button">Get Started</button>
       </div>
-      <div class="box">
-        <img class="" src="images/icon-access-anywhere.svg" alt="" />
-        <h2>Security you can trust</h2>
-        <p>
-          2-factor authentication and user-controlled encryption are just a
-          couple of the security features we allow to help secure your files.
-        </p>
-      </div>
-      <div class="box">
-        <img class="" src="images/icon-access-anywhere.svg" alt="" />
-        <h2>Real-time collaboration</h2>
-        <p>
-          Securely share files and folders with friends, family and colleagues
-          for live collaboration. No email attachments required.
-        </p>
-      </div>
-      <div class="box">
-        <img class="" src="images/icon-access-anywhere.svg" alt="" />
-        <h2>Store any type of file</h2>
-        <p>
-          Store any type of file Whether you're sharing holidays photos or work
-          documents, Fylo has you covered allowing for all file types to be
-          securely stored and shared.
-        </p>
-      </div>
-    </div>
-    <div class="split">
-      <div class="left">
-        <img class="" src="images/illustration-stay-productive.png" alt="" />
-      </div>
-      <div class="right">
-        <h2>Stay productive, wherever you are</h2>
-        <p>
-          Never let location be an issue when accessing your files. Fylo has you
-          covered for all of your file storage needs.
-        </p>
-        <p>
-          Securely share files and folders with friends, family and colleagues
-          for live collaboration. No email attachments required.
-        </p>
-        <a href="">See how Fylo works</a>
-      </div>
-    </div>
-    <div class="row">
-      <div class="testimonial-box">
-        <p>
-          Fylo has improved our team productivity by an order of magnitude.
-          Since making the switch our team has become a well-oiled collaboration
-          machine.
-        </p>
-        <div class="user-info">
-          <img src="images/profile-1.jpg" alt="" />
-          <p>Satish Patel</p>
-          <p>Founder & CEO, Huddle</p>
+      <div class="boxes">
+        <div class="box">
+          <img class="box-icon" src="images/icon-access-anywhere.svg" alt="" />
+          <h2>Access your files, anywhere</h2>
+          <p>
+            Access your files, anywhere The ability to use a smartphone, tablet,
+            or computer to access your account means your files follow you
+            everywhere.
+          </p>
+        </div>
+        <div class="box">
+          <img class="box-icon" src="images/icon-access-anywhere.svg" alt="" />
+          <h2>Security you can trust</h2>
+          <p>
+            2-factor authentication and user-controlled encryption are just a
+            couple of the security features we allow to help secure your files.
+          </p>
+        </div>
+        <div class="box">
+          <img class="box-icon" src="images/icon-access-anywhere.svg" alt="" />
+          <h2>Real-time collaboration</h2>
+          <p>
+            Securely share files and folders with friends, family and colleagues
+            for live collaboration. No email attachments required.
+          </p>
+        </div>
+        <div class="box">
+          <img class="box-icon" src="images/icon-access-anywhere.svg" alt="" />
+          <h2>Store any type of file</h2>
+          <p>
+            Store any type of file Whether you're sharing holidays photos or
+            work documents, Fylo has you covered allowing for all file types to
+            be securely stored and shared.
+          </p>
         </div>
       </div>
-      <div class="testimonial-box">
-        <p>
-          Fylo has improved our team productivity by an order of magnitude.
-          Since making the switch our team has become a well-oiled collaboration
-          machine.
-        </p>
-        <div class="user-info">
-          <img src="images/profile-2.jpg" alt="" />
-          <p>Bruce McKenzie</p>
-          <p>Founder & CEO, Huddle</p>
+      <div class="split-panel">
+        <div class="left">
+          <img class="" src="images/illustration-stay-productive.png" alt="" />
+        </div>
+        <div class="right">
+          <h2>Stay productive, wherever you are</h2>
+          <p>
+            Never let location be an issue when accessing your files. Fylo has
+            you covered for all of your file storage needs.
+          </p>
+          <p>
+            Securely share files and folders with friends, family and colleagues
+            for live collaboration. No email attachments required.
+          </p>
+          <a href="">See how Fylo works</a>
         </div>
       </div>
-      <div class="testimonial-box">
-        <p>
-          Fylo has improved our team productivity by an order of magnitude.
-          Since making the switch our team has become a well-oiled collaboration
-          machine.
-        </p>
-        <div class="user-info">
-          <img src="images/profile-3.jpg" alt="" />
-          <p>Iva Boyd</p>
-          <p>Founder & CEO, Huddle</p>
+      <div class="row">
+        <div class="testimonial-box">
+          <p class="testimonial-text">
+            Fylo has improved our team productivity by an order of magnitude.
+            Since making the switch our team has become a well-oiled
+            collaboration machine.
+          </p>
+          <div class="user-info">
+            <img class="profile-image" src="images/profile-1.jpg" alt="" />
+            <div>
+              <p>Satish Patel</p>
+              <p>Founder & CEO, Huddle</p>
+            </div>
+          </div>
+        </div>
+        <div class="testimonial-box">
+          <p class="testimonial-text">
+            Fylo has improved our team productivity by an order of magnitude.
+            Since making the switch our team has become a well-oiled
+            collaboration machine.
+          </p>
+          <div class="user-info">
+            <img class="profile-image" src="images/profile-2.jpg" alt="" />
+            <div>
+              <p>Bruce McKenzie</p>
+              <p>Founder & CEO, Huddle</p>
+            </div>
+          </div>
+        </div>
+        <div class="testimonial-box">
+          <p class="testimonial-text">
+            Fylo has improved our team productivity by an order of magnitude.
+            Since making the switch our team has become a well-oiled
+            collaboration machine.
+          </p>
+          <div class="user-info">
+            <img class="profile-image" src="images/profile-3.jpg" alt="" />
+            <div>
+              <p>Iva Boyd</p>
+              <p>Founder & CEO, Huddle</p>
+            </div>
+          </div>
         </div>
       </div>
+      <div class="info-container">
+        <h2 class="action-heading">Get early access today</h2>
+        <p class="action-text">
+          It only takes a minute to sign up and our free starter tier is
+          extremely generous. If you have any questions, our support team would
+          be happy to help you.
+        </p>
+        <input class="action-input" />
+        <button class="intro-button">Get Started For Free</button>
+      </div>
     </div>
-    <div class="info-container">
-      <h2>Get early access today</h2>
-      <p>
-        It only takes a minute to sign up and our free starter tier is extremely
-        generous. If you have any questions, our support team would be happy to
-        help you.
-      </p>
-      <button>Get Started For Free</button>
-    </div>
-    <footer>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua
-      </p>
-      <ul>
-        <li>+1-543-123-4567</li>
-        <li>example@fylo.com</li>
-      </ul>
-      <ul>
-        <li>About Us</li>
-        <li>Jobs</li>
-        <li>Press</li>
-        <li>Blog</li>
-      </ul>
-      <ul>
-        <li>Contact</li>
-        <li>Terms</li>
-        <li>Privacy</li>
-      </ul>
-      <div class="social"></div>
+    <footer class="footer">
+      <img class="logo" src="images/logo.svg" alt="" />
+      <div class="footer-content">
+        <p class="footer-text">
+          <img class="icon" src="images/icon-location.svg" alt="" />
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua
+        </p>
+        <ul class="footer-contact">
+          <li>
+            <img class="icon" src="images/icon-phone.svg" alt="" />
+            +1-543-123-4567
+          </li>
+          <li>
+            <img class="icon" src="images/icon-email.svg" alt="" />
+            example@fylo.com
+          </li>
+        </ul>
+        <ul class="footer-info">
+          <li>About Us</li>
+          <li>Jobs</li>
+          <li>Press</li>
+          <li>Blog</li>
+        </ul>
+        <ul class="footer-general">
+          <li>Contact</li>
+          <li>Terms</li>
+          <li>Privacy</li>
+        </ul>
+        <div class="footer-social"></div>
+      </div>
     </footer>
 
     <footer>
