basic mobile styles

--- a/index.html
+++ b/index.html
@@ -151,11 +151,16 @@
     <footer class="footer">
       <img class="logo" src="images/logo.svg" alt="" />
       <div class="footer-content">
-        <p class="footer-text">
-          <img class="icon" src="images/icon-location.svg" alt="" />
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua
-        </p>
+        <div class="footer-text">
+          <span>
+            <img class="icon" src="images/icon-location.svg" alt="" />
+          </span>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua
+          </p>
+        </div>
+
         <ul class="footer-contact">
           <li>
             <img class="icon" src="images/icon-phone.svg" alt="" />
@@ -177,7 +182,11 @@
           <li>Terms</li>
           <li>Privacy</li>
         </ul>
-        <div class="footer-social"></div>
+        <div class="footer-social">
+          <ion-icon name="logo-facebook"></ion-icon>
+          <ion-icon name="logo-twitter"></ion-icon>
+          <ion-icon name="logo-instagram"></ion-icon>
+        </div>
       </div>
     </footer>
 
@@ -190,4 +199,5 @@
       </p>
     </footer>
   </body>
+  <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
 </html>
