--- a/index.html
+++ b/index.html
@@ -43,36 +43,35 @@
       <div class="boxes">
         <div class="box">
           <img class="box-icon" src="images/icon-access-anywhere.svg" alt="" />
-          <h2>Access your files, anywhere</h2>
-          <p>
-            Access your files, anywhere The ability to use a smartphone, tablet,
-            or computer to access your account means your files follow you
-            everywhere.
+          <h2 class="box-title">Access your files, anywhere</h2>
+          <p class="box-text">
+            The ability to use a smartphone, tablet, or computer to access your
+            account means your files follow you everywhere.
           </p>
         </div>
         <div class="box">
           <img class="box-icon" src="images/icon-access-anywhere.svg" alt="" />
-          <h2>Security you can trust</h2>
-          <p>
+          <h2 class="box-title">Security you can trust</h2>
+          <p class="box-text">
             2-factor authentication and user-controlled encryption are just a
             couple of the security features we allow to help secure your files.
           </p>
         </div>
         <div class="box">
           <img class="box-icon" src="images/icon-access-anywhere.svg" alt="" />
-          <h2>Real-time collaboration</h2>
-          <p>
+          <h2 class="box-title">Real-time collaboration</h2>
+          <p class="box-text">
             Securely share files and folders with friends, family and colleagues
             for live collaboration. No email attachments required.
           </p>
         </div>
         <div class="box">
           <img class="box-icon" src="images/icon-access-anywhere.svg" alt="" />
-          <h2>Store any type of file</h2>
-          <p>
-            Store any type of file Whether you're sharing holidays photos or
-            work documents, Fylo has you covered allowing for all file types to
-            be securely stored and shared.
+          <h2 class="box-title">Store any type of file</h2>
+          <p class="box-text">
+            Whether you're sharing holidays photos or work documents, Fylo has
+            you covered allowing for all file types to be securely stored and
+            shared.
           </p>
         </div>
       </div>
@@ -81,16 +80,19 @@
           <img class="" src="images/illustration-stay-productive.png" alt="" />
         </div>
         <div class="right">
-          <h2>Stay productive, wherever you are</h2>
-          <p>
+          <h2 class="productive-title">Stay productive, wherever you are</h2>
+          <p class="productive-text">
             Never let location be an issue when accessing your files. Fylo has
             you covered for all of your file storage needs.
           </p>
-          <p>
+          <p class="productive-text">
             Securely share files and folders with friends, family and colleagues
             for live collaboration. No email attachments required.
           </p>
-          <a href="">See how Fylo works</a>
+          <a class="see-how" href=""
+            >See how Fylo works
+            <img class="icon-arrow" src="images/icon-arrow.svg" alt=""
+          /></a>
         </div>
       </div>
       <div class="row">
@@ -103,8 +105,8 @@
           <div class="user-info">
             <img class="profile-image" src="images/profile-1.jpg" alt="" />
             <div>
-              <p>Satish Patel</p>
-              <p>Founder & CEO, Huddle</p>
+              <p class="profile-name">Satish Patel</p>
+              <p class="profile-title">Founder & CEO, Huddle</p>
             </div>
           </div>
         </div>
@@ -117,8 +119,8 @@
           <div class="user-info">
             <img class="profile-image" src="images/profile-2.jpg" alt="" />
             <div>
-              <p>Bruce McKenzie</p>
-              <p>Founder & CEO, Huddle</p>
+              <p class="profile-name">Bruce McKenzie</p>
+              <p class="profile-title">Founder & CEO, Huddle</p>
             </div>
           </div>
         </div>
@@ -131,8 +133,8 @@
           <div class="user-info">
             <img class="profile-image" src="images/profile-3.jpg" alt="" />
             <div>
-              <p>Iva Boyd</p>
-              <p>Founder & CEO, Huddle</p>
+              <p class="profile-name">Iva Boyd</p>
+              <p class="profile-title">Founder & CEO, Huddle</p>
             </div>
           </div>
         </div>
@@ -145,47 +147,47 @@
           be happy to help you.
         </p>
         <input class="action-input" />
-        <button class="intro-button">Get Started For Free</button>
+        <button class="action-button">Get Started For Free</button>
       </div>
     </div>
     <footer class="footer">
-      <img class="logo" src="images/logo.svg" alt="" />
-      <div class="footer-content">
-        <div class="footer-text">
-          <span>
+      <div class="footer-container">
+        <img class="logo footer-logo" src="images/logo.svg" alt="" />
+        <div class="footer-content">
+          <div class="footer-text">
             <img class="icon" src="images/icon-location.svg" alt="" />
-          </span>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua
-          </p>
-        </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua
+            </p>
+          </div>
 
-        <ul class="footer-contact">
-          <li>
-            <img class="icon" src="images/icon-phone.svg" alt="" />
-            +1-543-123-4567
-          </li>
-          <li>
-            <img class="icon" src="images/icon-email.svg" alt="" />
-            example@fylo.com
-          </li>
-        </ul>
-        <ul class="footer-info">
-          <li>About Us</li>
-          <li>Jobs</li>
-          <li>Press</li>
-          <li>Blog</li>
-        </ul>
-        <ul class="footer-general">
-          <li>Contact</li>
-          <li>Terms</li>
-          <li>Privacy</li>
-        </ul>
-        <div class="footer-social">
-          <ion-icon name="logo-facebook"></ion-icon>
-          <ion-icon name="logo-twitter"></ion-icon>
-          <ion-icon name="logo-instagram"></ion-icon>
+          <ul class="footer-contact">
+            <li>
+              <img class="icon" src="images/icon-phone.svg" alt="" />
+              +1-543-123-4567
+            </li>
+            <li>
+              <img class="icon" src="images/icon-email.svg" alt="" />
+              example@fylo.com
+            </li>
+          </ul>
+          <ul class="footer-info">
+            <li>About Us</li>
+            <li>Jobs</li>
+            <li>Press</li>
+            <li>Blog</li>
+          </ul>
+          <ul class="footer-general">
+            <li>Contact</li>
+            <li>Terms</li>
+            <li>Privacy</li>
+          </ul>
+          <div class="footer-social">
+            <ion-icon name="logo-facebook"></ion-icon>
+            <ion-icon name="logo-twitter"></ion-icon>
+            <ion-icon name="logo-instagram"></ion-icon>
+          </div>
         </div>
       </div>
     </footer>
