--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </p>
         </div>
         <div class="box">
-          <img class="box-icon" src="images/icon-access-anywhere.svg" alt="" />
+          <img class="box-icon" src="images/icon-security.svg" alt="" />
           <h2 class="box-title">Security you can trust</h2>
           <p class="box-text">
             2-factor authentication and user-controlled encryption are just a
@@ -58,7 +58,7 @@
           </p>
         </div>
         <div class="box">
-          <img class="box-icon" src="images/icon-access-anywhere.svg" alt="" />
+          <img class="box-icon" src="images/icon-collaboration.svg" alt="" />
           <h2 class="box-title">Real-time collaboration</h2>
           <p class="box-text">
             Securely share files and folders with friends, family and colleagues
@@ -66,7 +66,7 @@
           </p>
         </div>
         <div class="box">
-          <img class="box-icon" src="images/icon-access-anywhere.svg" alt="" />
+          <img class="box-icon" src="images/icon-any-file.svg" alt="" />
           <h2 class="box-title">Store any type of file</h2>
           <p class="box-text">
             Whether you're sharing holidays photos or work documents, Fylo has
@@ -77,7 +77,11 @@
       </div>
       <div class="split-panel">
         <div class="left">
-          <img class="" src="images/illustration-stay-productive.png" alt="" />
+          <img
+            class="stay-productive"
+            src="images/illustration-stay-productive.png"
+            alt=""
+          />
         </div>
         <div class="right">
           <h2 class="productive-title">Stay productive, wherever you are</h2>
