--- a/index.html
+++ b/index.html
@@ -23,52 +23,64 @@
       <header class="header">
         <img class="logo" src="images/logo.svg" alt="" />
         <ul class="header-menu">
-          <li class="menu-item">Features</li>
-          <li class="menu-item">Team</li>
-          <li class="menu-item">Sign In</li>
+          <li class="header-menu__menu-item">Features</li>
+          <li class="header-menu__menu-item">Team</li>
+          <li class="header-menu__menu-item">Sign In</li>
         </ul>
       </header>
       <div class="hero-container">
-        <img class="intro-image" src="images/illustration-intro.png" alt="" />
-        <h1 class="intro-title">
+        <img
+          class="hero-container__intro-image"
+          src="images/illustration-intro.png"
+          alt=""
+        />
+        <h1 class="hero-container__intro-title">
           All your files in one secure location, accessible anywhere.
         </h1>
-        <p class="intro-text">
+        <p class="hero-container__intro-text">
           Fylo stores all your most important files in one secure location.
           Access them wherever you need, share and collaborate with friends
           family, and co-workers.
         </p>
-        <button class="intro-button">Get Started</button>
+        <button class="hero-container__intro-button">Get Started</button>
       </div>
       <div class="boxes">
         <div class="box">
-          <img class="box-icon" src="images/icon-access-anywhere.svg" alt="" />
-          <h2 class="box-title">Access your files, anywhere</h2>
-          <p class="box-text">
+          <img class="box__icon" src="images/icon-access-anywhere.svg" alt="" />
+          <h2 class="box__title">Access your files, anywhere</h2>
+          <p class="box__text">
             The ability to use a smartphone, tablet, or computer to access your
             account means your files follow you everywhere.
           </p>
         </div>
         <div class="box">
-          <img class="box-icon" src="images/icon-security.svg" alt="" />
-          <h2 class="box-title">Security you can trust</h2>
-          <p class="box-text">
+          <img class="box__icon" src="images/icon-security.svg" alt="" />
+          <h2 class="box__title">Security you can trust</h2>
+          <p class="box__text">
             2-factor authentication and user-controlled encryption are just a
             couple of the security features we allow to help secure your files.
           </p>
         </div>
         <div class="box">
-          <img class="box-icon" src="images/icon-collaboration.svg" alt="" />
-          <h2 class="box-title">Real-time collaboration</h2>
-          <p class="box-text">
+          <img
+            class="box__icon wide-icon"
+            src="images/icon-collaboration.svg"
+            alt=""
+          />
+          <h2 class="box__title">Real-time collaboration</h2>
+          <p class="box__text">
             Securely share files and folders with friends, family and colleagues
             for live collaboration. No email attachments required.
           </p>
         </div>
         <div class="box">
-          <img class="box-icon" src="images/icon-any-file.svg" alt="" />
-          <h2 class="box-title">Store any type of file</h2>
-          <p class="box-text">
+          <img
+            class="box__icon wide-icon"
+            src="images/icon-any-file.svg"
+            alt=""
+          />
+          <h2 class="box__title">Store any type of file</h2>
+          <p class="box__text">
             Whether you're sharing holidays photos or work documents, Fylo has
             you covered allowing for all file types to be securely stored and
             shared.
@@ -78,22 +90,24 @@
       <div class="split-panel">
         <div class="left">
           <img
-            class="stay-productive"
+            class="left__stay-productive"
             src="images/illustration-stay-productive.png"
             alt=""
           />
         </div>
         <div class="right">
-          <h2 class="productive-title">Stay productive, wherever you are</h2>
-          <p class="productive-text">
+          <h2 class="right__productive-title">
+            Stay productive, wherever you are
+          </h2>
+          <p class="right__productive-text">
             Never let location be an issue when accessing your files. Fylo has
             you covered for all of your file storage needs.
           </p>
-          <p class="productive-text">
+          <p class="right__productive-text">
             Securely share files and folders with friends, family and colleagues
             for live collaboration. No email attachments required.
           </p>
-          <a class="see-how" href=""
+          <a class="right__see-how" href=""
             >See how Fylo works
             <img class="icon-arrow" src="images/icon-arrow.svg" alt=""
           /></a>
@@ -107,10 +121,10 @@
             collaboration machine.
           </p>
           <div class="user-info">
-            <img class="profile-image" src="images/profile-1.jpg" alt="" />
+            <img class="user-info__image" src="images/profile-1.jpg" alt="" />
             <div>
-              <p class="profile-name">Satish Patel</p>
-              <p class="profile-title">Founder & CEO, Huddle</p>
+              <p class="user-info__name">Satish Patel</p>
+              <p class="user-info__title">Founder & CEO, Huddle</p>
             </div>
           </div>
         </div>
@@ -121,10 +135,10 @@
             collaboration machine.
           </p>
           <div class="user-info">
-            <img class="profile-image" src="images/profile-2.jpg" alt="" />
+            <img class="user-info__image" src="images/profile-2.jpg" alt="" />
             <div>
-              <p class="profile-name">Bruce McKenzie</p>
-              <p class="profile-title">Founder & CEO, Huddle</p>
+              <p class="user-info__name">Bruce McKenzie</p>
+              <p class="user-info__title">Founder & CEO, Huddle</p>
             </div>
           </div>
         </div>
@@ -135,30 +149,30 @@
             collaboration machine.
           </p>
           <div class="user-info">
-            <img class="profile-image" src="images/profile-3.jpg" alt="" />
+            <img class="user-info__image" src="images/profile-3.jpg" alt="" />
             <div>
-              <p class="profile-name">Iva Boyd</p>
-              <p class="profile-title">Founder & CEO, Huddle</p>
+              <p class="user-info__name">Iva Boyd</p>
+              <p class="user-info__title">Founder & CEO, Huddle</p>
             </div>
           </div>
         </div>
       </div>
-      <div class="info-container">
-        <h2 class="action-heading">Get early access today</h2>
-        <p class="action-text">
+      <div class="action">
+        <h2 class="action__heading">Get early access today</h2>
+        <p class="action__text">
           It only takes a minute to sign up and our free starter tier is
           extremely generous. If you have any questions, our support team would
           be happy to help you.
         </p>
-        <input class="action-input" />
-        <button class="action-button">Get Started For Free</button>
+        <input class="action__input" />
+        <button class="action__button">Get Started For Free</button>
       </div>
     </div>
     <footer class="footer">
-      <div class="footer-container">
-        <img class="logo footer-logo" src="images/logo.svg" alt="" />
-        <div class="footer-content">
-          <div class="footer-text">
+      <div class="footer__container">
+        <img class="logo footer__logo" src="images/logo.svg" alt="" />
+        <div class="footer__content">
+          <div class="footer__text">
             <img class="icon" src="images/icon-location.svg" alt="" />
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -166,28 +180,28 @@
             </p>
           </div>
 
-          <ul class="footer-contact">
-            <li>
+          <ul class="footer__contact">
+            <li class="footer__item">
               <img class="icon" src="images/icon-phone.svg" alt="" />
               +1-543-123-4567
             </li>
-            <li>
+            <li class="footer__item">
               <img class="icon" src="images/icon-email.svg" alt="" />
               example@fylo.com
             </li>
           </ul>
-          <ul class="footer-info">
-            <li>About Us</li>
-            <li>Jobs</li>
-            <li>Press</li>
-            <li>Blog</li>
+          <ul class="footer__info">
+            <li class="footer__item">About Us</li>
+            <li class="footer__item">Jobs</li>
+            <li class="footer__item">Press</li>
+            <li class="footer__item">Blog</li>
           </ul>
-          <ul class="footer-general">
-            <li>Contact</li>
-            <li>Terms</li>
-            <li>Privacy</li>
+          <ul class="footer__general">
+            <li class="footer__item">Contact</li>
+            <li class="footer__item">Terms</li>
+            <li class="footer__item">Privacy</li>
           </ul>
-          <div class="footer-social">
+          <div class="footer__social">
             <ion-icon name="logo-facebook"></ion-icon>
             <ion-icon name="logo-twitter"></ion-icon>
             <ion-icon name="logo-instagram"></ion-icon>
@@ -201,7 +215,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="#">Abe Menashy</a>.
       </p>
     </footer>
   </body>
